// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should render with help text 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="radio-group-15-label"
      class="BaseBox-bmPWx xrMLB"
      data-blade-component="radio-group"
      role="group"
    >
      <span
        data-blade-component="form-label"
        id="radio-group-15-label"
        style="width: auto; flex-shrink: 0; margin-right: 16px;"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx eeqPab"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO gaMIEc"
              data-blade-component="text"
            >
              Select fruits
            </p>
            <div
              class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
              data-blade-component="visually-hidden"
            >
              <p
                class="StyledBaseText-dVBfTO eIdQFo"
                data-blade-component="text"
              >
                ,Select one
              </p>
            </div>
          </div>
        </div>
      </span>
      <div
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx xrMLB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="base-box"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="radio-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-16-helptext-17"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      name="radio-group-15"
                      role="radio"
                      type="radio"
                      value="apple"
                    />
                    <div
                      class="RadioIconWrapperweb__RadioIconWrapper-sc-1memw5n-0 doUKpB"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Apple
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="base-box"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="radio-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-18-helptext-19"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      name="radio-group-15"
                      role="radio"
                      type="radio"
                      value="mango"
                    />
                    <div
                      class="RadioIconWrapperweb__RadioIconWrapper-sc-1memw5n-0 doUKpB"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Mango
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="BaseBox-bmPWx cCNoRc"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="base-box"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="radio-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-20-helptext-21"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      name="radio-group-15"
                      role="radio"
                      type="radio"
                      value="orange"
                    />
                    <div
                      class="RadioIconWrapperweb__RadioIconWrapper-sc-1memw5n-0 doUKpB"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Orange
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="BaseBox-bmPWx gnjvtY"
          data-blade-component="base-box"
        >
          <span
            class="BaseBox-bmPWx fSbYvl"
            data-blade-component="base-box"
            style="word-break: break-all;"
          >
            <span
              class="StyledBaseText-dVBfTO eZXGXv"
              data-blade-component="base-text"
            >
              Select one
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RadioGroup /> should render with label 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="radio-group-7-label"
      class="BaseBox-bmPWx xrMLB"
      data-blade-component="radio-group"
      role="group"
    >
      <span
        data-blade-component="form-label"
        id="radio-group-7-label"
        style="width: auto; flex-shrink: 0; margin-right: 16px;"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx eeqPab"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO gaMIEc"
              data-blade-component="text"
            >
              Select fav fruit
            </p>
            <div
              class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
              data-blade-component="visually-hidden"
            >
              <p
                class="StyledBaseText-dVBfTO eIdQFo"
                data-blade-component="text"
              />
            </div>
          </div>
        </div>
      </span>
      <div
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx xrMLB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="base-box"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="radio-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-1-helptext-2"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      name="radio-group-7"
                      role="radio"
                      type="radio"
                      value="apple"
                    />
                    <div
                      class="RadioIconWrapperweb__RadioIconWrapper-sc-1memw5n-0 doUKpB"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Apple
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="base-box"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="radio-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-3-helptext-4"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      name="radio-group-7"
                      role="radio"
                      type="radio"
                      value="mango"
                    />
                    <div
                      class="RadioIconWrapperweb__RadioIconWrapper-sc-1memw5n-0 doUKpB"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Mango
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="BaseBox-bmPWx cCNoRc"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="base-box"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="radio-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-5-helptext-6"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      name="radio-group-7"
                      role="radio"
                      type="radio"
                      value="orange"
                    />
                    <div
                      class="RadioIconWrapperweb__RadioIconWrapper-sc-1memw5n-0 doUKpB"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Orange
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
